appId: com.qazandoqafood
tags:
  - android
  - passing
---
- launchApp
- tapOn:
    id: "email"
- assertVisible: "E-mail"
- inputText: teste@teste.com
- tapOn:
    id: "password"
- inputText: 123456
- tapOn:
    id: "login-button"